--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id="boss-health-bar">
                 <div id="boss-health"></div>
             </div>
-            <div id="boss-image">👹 BOSS</div>
+            <div id="boss-image">👹 SIVA GEMOK</div>
             <div id="boss-stats">Health: <span id="health-text">1000</span>/1000</div>
         </div>
 
@@ -25,9 +25,9 @@
         <!-- CONTROLS (Mock Gifts) -->
         <div id="controls">
             <h3>🎁 Mock Gifts (For Testing):</h3>
-            <button onclick="summonUnit('archer')">🎯 Archer (50 damage)</button>
-            <button onclick="summonUnit('mage')">🔥 Mage (75 damage)</button>
-            <button onclick="summonUnit('tank')">🛡️ Tank (30 damage)</button>
+            <button onclick="summonUnit('archer')">🎯 AWAL (50 damage)</button>
+            <button onclick="summonUnit('mage')">🔥 DIDIP (75 damage)</button>
+            <button onclick="summonUnit('tank')">🛡️ AQIL (30 damage)</button>
             <button onclick="resetGame()">🔄 Reset Game</button>
         </div>
 
