--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="game-container">
-        <h1>🎮 BOSS BATTLE GAME 🎮</h1>
+        <h1>🎮 TUNETALK CUSTOMER CARE 🎮</h1>
         
         <!-- BOSS SECTION -->
         <div id="boss">
