--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <!-- CONTROLS -->
         <div id="controls">
             <h3>🎯 SUMMON UNITS:</h3>
-            <button onclick="summonUnit('archer')">🎯 Archer</button>
-            <button onclick="summonUnit('mage')">🔥 Mage</button>
-            <button onclick="summonUnit('tank')">🛡️ Tank</button>
+            <button onclick="summonUnit('archer')">🎯 Awal</button>
+            <button onclick="summonUnit('mage')">🔥 Didip</button>
+            <button onclick="summonUnit('tank')">🛡️ Aqil</button>
             <button onclick="resetGame()">🔄 Reset Game</button>
         </div>
 
